<resources>
    <string name="app_name">10-InventoryApp</string>
    <string name="empty_view_text">No items found in the database. Please add some products.</string>
    <string name="product_name_label">Name</string>
    <string name="product_price_label">Price</string>
    <string name="product_description_label">Product description (optional)</string>
    <string name="product_supplier_email_label">Supplier email address</string>
    <string name="select_image_label">Select image</string>
    <string name="take_picture_label">Take picture</string>
    <string name="action_save">Save!</string>
    <string name="action_delete">Delete!</string>
    <string name="catalog_activity_label">10 - Inventory app</string>
    <string name="add_item_activity_label">Add new item</string>
    <string name="item_details_activity_label">Edit item</string>
    <string name="editor_insert_product_failed">Error with saving the product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">There are unsaved changes that will be lost if you leave this editor</string>
    <string name="discard">Discard changes</string>
    <string name="keep_editing">Keep editing</string>
    <string name="editor_delete_product_failed">There was an error while deleting product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_activity_title_new_product">New Product</string>
    <string name="editor_update_product_failed">There was an error while updating the product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="sell_button">sell</string>
    <string name="error_creating_file_toast">Error with creating a file, please report it</string>
    <string name="pick_image_error">Error getting the image</string>
    <string name="price_unit">€</string>
    <string name="validation_error_name_empty">Please fill out the product name</string>
    <string name="validation_error_price_negative">Please make sure price is positive</string>
    <string name="validation_error_quantity_negative">Please make sure quantity is positive</string>
    <string name="validation_error_supplier_invalid">Sorry, the email address does not seem to be valid</string>
    <string name="validation_error_image">There seems to be a problem with the product image, please make sure you took or selected an image of the product</string>
    <string name="send_email_button">Send email</string>
    <string name="email_subject">Product order for:</string>
    <string name="email_body_intro">We would like to order !!!REPLACE_ME!!! items of:</string>
    <string name="send_email_using">Send Email Using:</string>
    <string name="select_picture">Select Picture</string>
    <string name="price_parsing_error">There was an error with parsing the price</string>

    <plurals name="number_items_left">
        <item quantity="one">%d item left.</item>
        <item quantity="other">%d items left.</item>
    </plurals>
</resources>
